--- a/PurpleAirSensorList.html
+++ b/PurpleAirSensorList.html
@@ -15,7 +15,7 @@
     <div class="container container-table">
         <div class="row vertical-center-row">
             <div class="text-center col-md-4 col-md-offset-4">
-                <button type = "button" id = "submitButton" class = "btn btn-success" style = "margin: 10px;">Get PurpleAir Data!</button>
+                <button type = "button" id = "submitButton" class = "btn btn-success" style = "margin: 10px; background-color:purple ;color:white">Get PurpleAir Data!</button>
             </div>
         </div>
     </div>
