--- a/PurpleAirSensorList.html
+++ b/PurpleAirSensorList.html
@@ -19,5 +19,8 @@
             </div>
         </div>
     </div>
+    <div style="color:white">
+        https://github.com/jetarcher/PurpleAir/
+    </div>
 </body>
 </html>
