--- a/PurpleAirSensorList.html
+++ b/PurpleAirSensorList.html
@@ -8,7 +8,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
     
     <script src="https://connectors.tableau.com/libs/tableauwdc-2.3.latest.js" type="text/javascript"></script>
-    <script src="../js/PurpleAirPM2.5.js" type="text/javascript"></script>
+    <script src="./js/PurpleAirPM2.5.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -24,3 +24,4 @@
     </div>
 </body>
 </html>
+
